tests/errors/compiler/missing_terminating_quote_char/string_init.c
void main()
{
	char str[3] = "qwe;
}
